--- a/index.html
+++ b/index.html
@@ -3,5 +3,22 @@
 <title=Lucas test website</title>
 </head>
 <body>
-Testing
+  <div>
+    <!--Header-->
+    <!-- <img src="sourcefilepath/picture.png
+              alt="photograph"
+              width="694" height="125" /> -->
+  </div>
+    <div>
+    <!--menu-->
+  </div>
+    <div>
+    <!--content-->
+      <h1>Contact Info</h1>
+      <h2>Questions?</h2>
+      <p>Reach out to Lucas with your questions</p>
+  </div>
+    <div>
+    <!--footer-->
+  </div>
 </body>
