--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--content-->
       <h1>Contact Info</h1>
       <h2>Questions?</h2>
-      <p>Reach out to Lucas with your questions</p>
+      <p>There will be no questions</p>
   </div>
     <div>
     <!--footer-->
