--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 # lucasbarnes.github.io
+
 <head>
 <title=Lucas test website</title>
 </head>
+
 <body>
+  
   <div>
     <!--Header-->
     <!-- <img src="sourcefilepath/picture.png
               alt="photograph"
               width="694" height="125" /> -->
   </div>
-    <div>
+    
+  <div>
     <!--menu-->
+      <u1>
+        <li>Home</li>
+        <li>Contact Info</li>
+        <li>Cool Things</li>
+      </u1>
   </div>
+  
     <div>
     <!--content-->
       <h1>Contact Info</h1>
       <h2>Questions?</h2>
       <p>There will be no questions</p>
   </div>
+  
     <div>
     <!--footer-->
   </div>
+  
 </body>
