--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   
   <div>
     <!--Header-->
-    <!-- <img src="sourcefilepath/picture.png
+    <img src="IMG_2113.JPG"
               alt="photograph"
-              width="694" height="125" /> -->
+              width="694" height="125" />
   </div>
     
   <div>
