--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <div>
     <!--menu-->
       <u1>
-        <li>Home</li>
-        <li>Contact Info</li>
-        <li>Cool Things</li>
+        <li>Bullet 1</li>
+        <li>Bullet 2</li>
+        <li>Bullet 3</li>
       </u1>
   </div>
   
     <div>
     <!--content-->
-      <h1>Contact Info</h1>
+      <h1>Contact</h1>
       <h2>Questions?</h2>
       <p>There will be no questions</p>
   </div>
