--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   
     <div>
     <!--footer-->
+                                          Copyright &copy; 2020-<current year> Lucas Barnes
   </div>
   
 </body>
