--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
     <div>
     <!--footer-->
-                                          Copyright &copy; 2020-<current year> Lucas Barnes
+                                          Copyright &copy; 2020-<current year> lb
   </div>
   
 </body>
