--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
 <title=Lucas test website</title>
 </head>
@@ -6,7 +8,7 @@
   
   <div>
     <!--Header-->
-    <img src="IMG_2113.JPG"
+    <img src="IMG_2113.JPG" style="width:100%;"
               alt="photograph"
               width = 1000" height ="1000" />
   </div>
