--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<head>
-<title=Lucas test website</title>
-</head>
-
+<!DOCTYPE html>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-  
-  <div>
-    <!--Header-->
-    <img src="IMG_2113.JPG" style="width:100%;"
-              alt="photograph"
-              width = 1000" height ="1000" />
+
+<div class="w3-container w3-green">
+  <h1>W3Schools Demo</h1>
+  <p>Resize this responsive page!</p>
+</div>
+
+<div class="w3-row-padding">
+  <div class="w3-third">
+    <h2>London</h2>
+    <p>London is the capital city of England.</p>
+    <p>It is the most populous city in the United Kingdom,
+    with a metropolitan area of over 13 million inhabitants.</p>
   </div>
-    
-  <div>
-    <!--menu-->
-      <u1>
-        <li>Bullet 1</li>
-        <li>Bullet 2</li>
-        <li>Bullet 3</li>
-      </u1>
+
+  <div class="w3-third">
+    <h2>Paris</h2>
+    <p>Paris is the capital of France.</p>
+    <p>The Paris area is one of the largest population centers in Europe,
+    with more than 12 million inhabitants.</p>
   </div>
-  
-    <div>
-    <!--content-->
-      <h1>Contact</h1>
-      <h2>Questions?</h2>
-      <p>There will be no questions</p>
+
+  <div class="w3-third">
+    <h2>Tokyo</h2>
+    <p>Tokyo is the capital of Japan.</p>
+    <p>It is the center of the Greater Tokyo Area,
+    and the most populous metropolitan area in the world.</p>
   </div>
-  
-    <div>
-    <!--footer-->
-                                          Copyright &copy; 2020-<current year> lb
-  </div>
-  
+</div>
+
 </body>
+</html>
