--- a/index.html
+++ b/index.html
@@ -5,30 +5,27 @@
 <body>
 
 <div class="w3-container w3-green">
-  <h1>W3Schools Demo</h1>
-  <p>Resize this responsive page!</p>
+  <h1>www.creedthoughts.gov.www.creedthoughts</h1>
+  <p>Text</p>
 </div>
 
 <div class="w3-row-padding">
   <div class="w3-third">
-    <h2>London</h2>
-    <p>London is the capital city of England.</p>
-    <p>It is the most populous city in the United Kingdom,
-    with a metropolitan area of over 13 million inhabitants.</p>
+    <h2>Section 1</h2>
+    <p>Text to add 1</p>
+    <p>Text to add 2</p>
   </div>
 
   <div class="w3-third">
-    <h2>Paris</h2>
-    <p>Paris is the capital of France.</p>
-    <p>The Paris area is one of the largest population centers in Europe,
-    with more than 12 million inhabitants.</p>
+    <h2>Section 2</h2>
+    <p>Text to add 1</p>
+    <p>Text to add 2</p>
   </div>
 
   <div class="w3-third">
-    <h2>Tokyo</h2>
-    <p>Tokyo is the capital of Japan.</p>
-    <p>It is the center of the Greater Tokyo Area,
-    and the most populous metropolitan area in the world.</p>
+    <h2>Section 3</h2>
+    <p>Text to add 1</p>
+    <p>Text to add 2</p>
   </div>
 </div>
 
