--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="w3-container w3-green">
+<div class="w3-container w3-blue">
   <h1>www.creedthoughts.gov.www.creedthoughts</h1>
   <p>Text</p>
 </div>
